--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 body {
-	margin: 10px 50px;
+	margin: 0 80px 10px;
 }
 
 p {
@@ -74,12 +74,14 @@ p {
 }
 
 nav {
-	width: 91.19%;
+	width: 100%;
+	display: flex;
+	align-items: center;
 	padding: 15px 0 15px 0;
 	background: rgba(136,136,136,.6);
-	position: fixed;
-	top: 0;
-	overflow: hidden;
+	/* position: fixed; */
+	/* top: 0; */
+	/* overflow: hidden; */
 }
 
 nav a {
@@ -98,29 +100,27 @@ nav a:nth-child(1) {
 	padding-left: 10px;
 }
 
-.logo {
-	padding: 0 10px 0 50px;
-	float: right;
-	/* display: inline-block;
-	vertical-align: middle; */
-}
+/* nav img {
+	align-self: baseline;
+} */
 
 header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 	border-bottom: 1px solid black;
-	margin: 60px 0 0 0;
+	margin: 20px 0 0 0;
 	padding: 60px 0 60px 0;
 	/* testing */
 }
 
 .header-div {
-	display: inline-block;
-	width: 49%;
-	vertical-align: middle;
+	width: 100%;
 }
 
 .main-heading {
 	text-align: center;
-	font-size: 64px;
+	font-size: 76px;
 }
 
 .header-btn {
@@ -135,8 +135,6 @@ header {
 }
 
 .header-img {
-	display: inline-block;
-	width: 49%;
 	vertical-align: middle;
 	text-align: right;
 }
@@ -147,24 +145,18 @@ header {
 
 .top-content-contain {
 	width: 100%;
+	display: flex;
 }
 
 .top-content-features {
-	width: 49%;
-	display: inline-block;
-	/* margin-right: 2%; */
+	width: 50%;
 }
 
 .top-content-about {
-	width: 49%;
-	display: inline-block;
-	/* margin-left: 2%; */
+	width: 50%;
 }
 
 .top-content-img {
-	/* width: 100%; */
-	/* margin: 0 auto; */
-	/* text-align: center; */
 	padding: 40px 0;
 }
 
@@ -179,23 +171,21 @@ header {
 .bottom-content-contain {
 	width: 100%;
 	padding: 0 0 40px 0;
+	display: flex;
 }
 
 .bottom-content-services {
-	width: 32%;
-	display: inline-block;
+	width: 33%;
 	margin-right: 1%;
 }
 
 .bottom-content-product {
-	width: 32%;
-	display: inline-block;
+	width: 33%;
 	margin-right: 1%;
 }
 
 .bottom-content-vision {
-	width: 32%;
-	display: inline-block;
+	width: 33%;
 	margin-left: 1.3%;
 }
 
