--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -100,9 +100,9 @@ nav a:nth-child(1) {
 	padding-left: 10px;
 }
 
-/* nav img {
-	align-self: baseline;
-} */
+nav img {
+	margin-left: 80px;
+}
 
 header {
 	display: flex;
