--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -78,7 +78,8 @@ nav {
 	display: flex;
 	align-items: center;
 	padding: 15px 0 15px 0;
-	background: rgba(136,136,136,.6);
+    background: #fff;
+	/* background: rgba(136,136,136,.6); */
 	/* position: fixed; */
 	/* top: 0; */
 	/* overflow: hidden; */
@@ -87,11 +88,11 @@ nav {
 nav a {
 	padding: 0 35px;
 	text-decoration: none;
-	color: #fff;
+	color:grey;
 }
 
 nav a:hover {
-	color: #000;
+	color: rgb(134, 134, 134);
 	transition-duration: 1s;
 	box-shadow: 0 1.5px dodgerblue;
 }
@@ -102,4 +103,91 @@ nav a:nth-child(1) {
 
 nav img {
 	margin-left: 80px;
+}
+
+.services-header-img {
+    width: 100%;
+    padding: 10px 0 0 0;
+}
+
+.services-div {
+    padding: 20px 0 0;
+	border-bottom: 1px solid black;
+}
+
+.services-div h2 {
+	font-size: 24px;
+}
+
+.services-div p {
+	padding-bottom: 35px;
+	line-height: 1.2;
+	letter-spacing: .3px;
+}
+
+.main-cards-section {
+	padding: 30px 0 0px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	border-bottom: 2px solid black;
+	margin-bottom: 40px;
+}
+
+.content-card {
+	width: 48%;
+	border: 1px solid black;
+	padding: 20px;
+	margin-bottom: 40px;
+	background: #fafafa;
+}
+
+.content-card p {
+	line-height: 1.2;
+	letter-spacing: .3px;
+	padding: 0 0 20px 0;
+}
+
+.content-card button {
+	background: #fff;
+	/* font-size: 14px; */
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 10px 40px;
+}
+
+.bottom-content-section {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 0 40px 0;
+}
+
+.bottom-content-text {
+	width: 48%;
+}
+
+.bottom-content-text p {
+	padding: 0 0 15px 0;
+	line-height: 1.2;
+	letter-spacing: .3px;
+}
+
+.bottom-content-text ul {
+	list-style-type: disc;
+	list-style-position: inside;
+}
+
+.bottom-content-text li {
+	padding: 5px 0;
+}
+
+.services-info-img {
+	width: 48%;
+}
+
+footer {
+	text-align: center;
+	padding: 40px 0 30px;
 }
