--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -191,3 +191,17 @@ footer {
 	text-align: center;
 	padding: 40px 0 30px;
 }
+
+/* Media Queries */
+
+/* Mobile Phone */
+
+@media screen and (max-width: 600px) {
+	.main-cards-section {
+		flex-direction: column;
+	}
+
+	.content-card p {
+		color: red;
+	}
+}
