change .bottom-content-section flex-direction to column, change width of .bottom-content-text and .services-info-img

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -230,4 +230,17 @@ footer {
 		width: 100%;
 	}
 
+	.bottom-content-section {
+		flex-direction: column;
+	}
+
+	.bottom-content-text {
+		width: 100%;
+		padding: 0 0 40px 0;
+	}
+
+	.services-info-img {
+		width: 100%;
+	}
+
 }
