--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -76,6 +76,7 @@ p {
 nav {
 	width: 100%;
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	padding: 15px 0 15px 0;
     background: #fff;
@@ -86,7 +87,7 @@ nav {
 }
 
 nav a {
-	padding: 0 35px;
+	/* padding: 0 35px; */
 	text-decoration: none;
 	color:grey;
 }
@@ -101,8 +102,9 @@ nav a:nth-child(1) {
 	padding-left: 10px;
 }
 
-nav img {
-	margin-left: 80px;
+nav a img {
+	/*  */
+	align-self: flex-end;
 }
 
 .services-header-img {
@@ -242,5 +244,32 @@ footer {
 	.services-info-img {
 		width: 100%;
 	}
+}
 
+/* smaller screens, mobile, tablet */
+
+@media screen and (min-width: 601px) and (max-width: 999px) {
+	nav {
+		flex-direction: column-reverse;
+	}
+
+	nav a {
+		padding: 10px 0 10px;
+		text-align: center;
+		border-bottom: 1px solid black;
+		width: 100%;
+	}
+
+	nav a:nth-child(1) {
+		/* padding: 0; */
+	}
+
+	nav a:nth-child(7) {
+		border-bottom: none;
+	}
+
+	nav img {
+		margin-left: 0;
+		padding: 0 0 10px 0;
+	}
 }
